fixed pannel padding and margin. New class custom-panel

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -49,3 +49,11 @@ section {
 textarea {
   height: auto;
 }
+
+.custom-panel {
+  @include panel(
+    // Sets the panel padding amount. Default: $panel-padding
+    $padding:5px
+  );
+  margin-bottom: 5px
+}
