--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -2,11 +2,16 @@
 <div class="row">
   <div class="panel radius">
     <div class="row">
+      <% if comment.user %>
       <div class = "small-3 columns large-1 medium-1 small-2">
+        
         <%= link_to image_tag("#{comment.user.photo_location}"), comment.user %>
         
       </div>
       <small><%= link_to comment.user.name, comment.user %></small>
+      <% else %>
+      <small> User Deleted</small>
+      <% end %>
       <small><%= comment.created_at %></small>
       <%= raw comment.content %>
     </div>
