--- a/app/views/posts/_my_feed.html.erb
+++ b/app/views/posts/_my_feed.html.erb
@@ -1,8 +1,8 @@
 <% if current_user.friends.count == 0 %>
 <%= render "posts/no_followers"%>
-  <% end %>
+<% end %>
 <% @posts.each do |post| %>
-<div class= "panel small-12 columns">
+<div class= "custom-panel small-12 columns">
   <div class="row">
     <div class= "small-12 columns">
       <div class="row">
@@ -23,7 +23,7 @@
           </div>
                 &nbsp;
           <div class='row'>
-            <div class = 'small-12 small-left columns'>
+            <div class = 'small-12 small-left columns large-8'>
               <a href="#" data-reveal-id="<%=dom_id(post)%>" class="radius button tiny">Summary</a>
               <% if user_signed_in? && (current_user.has_role? :admin) %>
               <%= link_to "Destroy", post, :confirm => 'Are you sure?', :method => :delete %>
@@ -40,7 +40,7 @@
               <%= link_to "Repost", new_user_registration_path, :class => "button tiny round"%>
               <% end %>
             </div>
-            <div class="large-7 columns hide-for-small-only">
+            <div class="large-4 columns hide-for-small-only">
               <small><%= link_to "#{post.comments.count} comments", post %> </small>
             </div>
           </div>
