--- a/app/views/devise/shared/_omnilinks.html.erb
+++ b/app/views/devise/shared/_omnilinks.html.erb
@@ -1,7 +1,5 @@
-<%- if devise_mapping.omniauthable? %>
 <div class="row">
-  <%- resource_class.omniauth_providers.each do |provider| %>
-  <%= link_to "Sign in with #{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider),:class => "button round tiny" %>
-  <% end -%>
-  <% end -%>
-  </div>
+  <%= link_to "Sign in with Google", user_omniauth_authorize_path(:google_oauth2), :class => "google-button" %>
+  <%= link_to "Sign in with Twitter", user_omniauth_authorize_path(:twitter), :class => "twitter-button" %>
+  <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook), :class => "facebook-button" %>
+</div>
