--- a/app/views/friend_mailer/follow_email.text.erb
+++ b/app/views/friend_mailer/follow_email.text.erb
@@ -1,9 +1,9 @@
   Hey <%= @user.name %>,
 ===============================================
-<%= link_to @follower.name, @follower %> just followed you on WeFeed.
+<%= link_to @follower.name, "#{@follower_url}" %> just followed you on WeFeed.
 That's awesome, because they find your posts, reposts and comments valuable and intresting.
 
-To see all of your followers, you can go to your <%= link_to "profile page", @user %>.
+To see all of your followers, you can go to your <%= link_to "profile page", "#{@user_url}" %>.
 
 Thanks for being awesome, and have a great day!
 
