fixed email, again

--- a/app/views/friend_mailer/follow_email.html.erb
+++ b/app/views/friend_mailer/follow_email.html.erb
@@ -6,7 +6,7 @@
   <body>
     <h1>Hey <%= @user.name %>,</h1>
     <p>
-      <%= link_to @follower.name, "#{@follower_url}" %> just followed you on WeFeed.<br/>
+      <%= link_to "#{@follower.name}", "#{@follower_url}" %> just followed you on WeFeed.<br/>
       That's awesome, because they find your posts, reposts and comments valuable and intresting.<br/>
     </p>
     <p>
