--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
     
     <%= stylesheet_link_tag    "application" %>
 
+    <%= javascript_include_tag "vendor/modernizr" %>
     <%= csrf_meta_tags %>
   </head>
   <body>
@@ -23,7 +24,7 @@
                 <%= render "devise/shared/omnilinks" %>
                 <% end %>
                 <%= yield %>
-                    <%= javascript_include_tag "application" %>
+    <%= javascript_include_tag "application" %>
               </div>
               <!-- On small devices this column is hidden -->
               <aside class="large-3 columns hide-for-small">
