--- a/app/views/posts/_my_feed.html.erb
+++ b/app/views/posts/_my_feed.html.erb
@@ -6,16 +6,14 @@
 <div class= "custom-panel small-12 columns">
   <div class="row">
     <div class= "small-12 columns">
+      <% if current_user.friend_reposts.map(&:post_id).include?(post.id) %>
       <div class "row">
-        <div class = "small-12 columns">
-          <% if current_user.friend_reposts.map(&:post_id).include?(post.id) %>
-          <span data-tooltip class="has-tip tip-top"  title="<%= (" #{
-                post.reposts.where('user_id IN (:followed_user_ids)', {followed_user_ids: current_user.friend_ids}).each {|repost| repost.user_name}.map(&:user_name).join(', ')
-                }").html_safe  %>" ><span class="secondary label">Reposted by ...</span></span>
-          <% end %>
+        <div class = "small-10 small-offset-3 large-offset-2 columns large-12 small-12" style="padding-left: 0px;">
+          <span data-tooltip class="has-tip tip-top"  title="<%= (" #{post.reposts.where('user_id IN (:followed_user_ids)', {followed_user_ids: current_user.friend_ids}).each {|repost| repost.user_name}.map(&:user_name).join(', ')}").html_safe  %>" >
+            <span class="secondary round label">Reposted by ...</span></span>
         </div>
       </div>
-      <small>&nbsp;</small>
+      <% end %>
       <div class="row">
         <div class = "small-2 columns large-2 small-3">
           <% unless post.user.nil? %>
