--- a/app/views/posts/_my_feed.html.erb
+++ b/app/views/posts/_my_feed.html.erb
@@ -32,7 +32,7 @@
           </div>
           &nbsp;
           <div class='row'>
-            <div class = 'small-12 small-left columns large-8'>
+            <div class = 'small-12 small-left columns large-4'>
               <a href="#" data-reveal-id="<%=dom_id(post)%>" class="radius button tiny">Summary</a>
               <% if user_signed_in? && (current_user.has_role? :admin) %>
               <%= link_to "Destroy", post, :confirm => 'Are you sure?', :method => :delete %>
@@ -49,8 +49,15 @@
               <%= link_to "Repost", new_user_registration_path, :class => "button tiny round"%>
               <% end %>
             </div>
-            <div class="large-4 columns hide-for-small-only">
+            <div class="large-8 columns hide-for-small-only">
               <small><%= link_to "#{post.comments.count} comments", post %> </small>
+              <div class="row">
+                <ul class="small-block-grid-8">
+                  <% post.reposts.take(8).each do |repost| %>
+                  <li><%= image_tag("#{repost.user.photo_location}") %></li>
+                  <% end %>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
