--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,6 @@
 <% if comment.content %>
-<div class="row" "<%=dom_id(comment)%>" >
-  <div class="panel radius">
+<div class="row" id = "<%=dom_id(comment)%>" >
+  <div class="custom-panel radius">
     <div class="row">
       <% if comment.user %>
       <div class = "small-3 columns large-1 medium-1 small-2">
@@ -8,20 +8,27 @@
         <%= link_to image_tag("#{comment.user.photo_location}"), comment.user %>
         
       </div>
-      <small><%= link_to comment.user.name, comment.user %></small>
-      <% else %>
-      <small> User Deleted</small>
-      <% end %>
-      
-      <small><%= comment.created_at %></small>
-      <%= link_to "&#215;".html_safe, comment, :confirm => 'Are you sure?', :method => :delete, remote: true %>
-      <div class = "row">
-        <div claas = "small-12 columns">
+      <div class = "small-9 columns large-11 medium-11 small-10">
+        <div class= "row" >
+          <div class = "small-3 columns large-2 medium-2 small-2">
+            <small><%= link_to comment.user.name, comment.user %></small>
+            <% else %>
+            <small> User Deleted</small>
+            <% end %>
+          </div>
+          <small><%= comment.created_at %></small>
           <% if comment.user == current_user %>
-          <%= best_in_place comment, :content, :type => :textarea, :display_as => :comment_mk, :classes => 'small-12 columns' %>
-          <% else %>
-          <%= comment.comment_mk %>
+          <%= link_to "&#215;".html_safe, comment, :confirm => 'Are you sure?', :method => :delete, remote: true %>
           <% end %>
+          <div class = "row">
+            <div class = "small-12 columns">
+              <% if comment.user == current_user %>
+              <%= best_in_place comment, :content, :type => :textarea, :display_as => :comment_mk, :classes => 'small-12 columns' %>
+              <% else %>
+              <%= comment.comment_mk %>
+              <% end %>
+            </div>
+          </div>
         </div>
       </div>
     </div>
