--- a/app/views/posts/_my_feed.html.erb
+++ b/app/views/posts/_my_feed.html.erb
@@ -25,18 +25,22 @@
           <div class = "row">
             <div class = "small-12 columns hide-for-large-only">
               <medium><%= link_to post.title.html_safe, post.url, :target => "_blank" %></medium>
+               <% if user_signed_in? && (current_user.has_role? :admin) %>
+              <%= link_to "&#215;".html_safe, post, :confirm => 'Are you sure?',:class => "right",  :method => :delete, remote: true %>
+            <% end %>
             </div>
             <div class = "large-12 columns hide-for-medium-down">
-              <%= link_to post.title.html_safe, post.url, :target => "_blank" %>              
+              <%= link_to post.title.html_safe, post.url, :target => "_blank" %>
+               <% if user_signed_in? && (current_user.has_role? :admin) %>
+              <%= link_to "&#215;".html_safe, post, :confirm => 'Are you sure?',:class => "right", :method => :delete, remote: true %>
+            <% end %>
             </div>
+           
           </div>
           &nbsp;
           <div class='row'>
             <div class = 'small-12 small-left columns large-4'>
               <a href="#" data-reveal-id="<%=dom_id(post)%>" class="radius button tiny">Summary</a>
-              <% if user_signed_in? && (current_user.has_role? :admin) %>
-              <%= link_to "Destroy", post, :confirm => 'Are you sure?', :method => :delete %>
-              <% end %>
               <% if user_signed_in? %>
               <% if current_user.reposted_posts.include?(post) %>
               <span class="secondary label">Reposted</span>
