--- a/app/views/posts/_all_feed.html.erb
+++ b/app/views/posts/_all_feed.html.erb
@@ -2,72 +2,79 @@
 <div class= "custom-panel small-12 columns">
   <div class="row">
     <div class= "small-12 columns">
-      <div class="row">
-        <div class = "small-2 columns large-2 small-3">
-          <% unless post.user.nil? %>
-          <%= link_to image_tag("#{post.user.photo_location}"), post.user %>
-          <small><%= link_to post.user.name, post.user %></small>
-          <% end %>
+      <div class = "row">
+        <div class = "small-4 small-offset-3 columns hide-for-medium-up">
+          <small><%= link_to "#{post.comments.count} comments", post %> </small>
         </div>
-        <div class = "small-8 columns large-10 small-9">
-          <div class = "row">
-            <div class = "small-12 columns hide-for-large-only">
-              <medium><%= link_to post.title.html_safe, post.url, :target => "_blank" %></medium>
-               <% if user_signed_in? && (current_user.has_role? :admin) %>
-              <%= link_to "&#215;".html_safe, post, :confirm => 'Are you sure?',:class => "right",  :method => :delete, remote: true %>
+      </div>
+      <div class = "small-2 columns large-2 small-3">
+        <% unless post.user.nil? %>
+        <%= link_to image_tag("#{post.user.photo_location}"), post.user %>
+        <small><%= link_to post.user.name, post.user %></small>
+        <% end %>
+      </div>
+      <div class = "small-8 columns large-10 small-9">
+        <div class = "row">
+          <div class = "small-12 columns hide-for-large-only">
+            <medium><%= link_to post.title.html_safe, post.url, :target => "_blank" %></medium>
+            <% if user_signed_in? && (current_user.has_role? :admin) %>
+            <%= link_to "&#215;".html_safe, post, :confirm => 'Are you sure?',:class => "right",  :method => :delete, remote: true %>
             <% end %>
-            </div>
-            <div class = "large-12 columns hide-for-medium-down">
-              <%= link_to post.title.html_safe, post.url, :target => "_blank" %>
-               <% if user_signed_in? && (current_user.has_role? :admin) %>
-              <%= link_to "&#215;".html_safe, post, :confirm => 'Are you sure?',:class => "right", :method => :delete, remote: true %>
+          </div>
+          <div class = "large-12 columns hide-for-medium-down">
+            <%= link_to post.title.html_safe, post.url, :target => "_blank" %>
+            <% if user_signed_in? && (current_user.has_role? :admin) %>
+            <%= link_to "&#215;".html_safe, post, :confirm => 'Are you sure?',:class => "right", :method => :delete, remote: true %>
             <% end %>
+          </div>
+        </div>
+        &nbsp;
+        <div class='row'>
+          <div class = 'small-12 small-left columns large-4'>
+            <a href="#" data-reveal-id="<%=dom_id(post)%>" class="radius button tiny">Summary</a>
+            <% if user_signed_in? %>
+            <% if current_user.reposted_posts.include?(post) %>
+            <span class="secondary label">Reposted</span>
+            <% elsif current_user.posts.include?(post) %>
+            <% else %>
+            <%= link_to "Repost", reposts_path(:reposted_post_id => post),:class => "button tiny round", :method => :post, remote: true, :id => "#{post.id}" %>
+            <span style="display: none;" <%= ("id='repost-badge#{post.id}'").html_safe %> class="secondary label">Reposted</span>
+            <% end %>
+            <% else %>
+            <%= link_to "Repost", new_user_registration_path, :class => "button tiny round"%>
+            <% end %>
+          </div>
+          <div class="large-8 columns hide-for-small-only">
+            <small><%= link_to "#{post.comments.count} comments", post %> </small>
+            <% if user_signed_in? %>
+            <div class="row">
+              <ul class="small-block-grid-8">
+                <% current_user.friends.where('friend_id IN (:comments_user_ids)', {comments_user_ids: post.comments.map(&:user_id)}).uniq.take(8).each do |user| %>
+                <li><%= image_tag("#{user.photo_location}") %></li>
+                <% end %>
+              </ul>
             </div>
-          &nbsp;
-          <div class='row'>
-            <div class = 'small-12 small-left columns large-4'>
-              <a href="#" data-reveal-id="<%=dom_id(post)%>" class="radius button tiny">Summary</a>
-              <% if user_signed_in? %>
-              <% if current_user.reposted_posts.include?(post) %>
-              <span class="secondary label">Reposted</span>
-              <% elsif current_user.posts.include?(post) %>
-              <% else %>
-              <%= link_to "Repost", reposts_path(:reposted_post_id => post),:class => "button tiny round", :method => :post, remote: true, :id => "#{post.id}" %>
-              <span style="display: none;" <%= ("id='repost-badge#{post.id}'").html_safe %> class="secondary label">Reposted</span>
-              <% end %>
-              <% else %>
-              <%= link_to "Repost", new_user_registration_path, :class => "button tiny round"%>
-              <% end %>
-            </div>
-            <div class="large-8 columns hide-for-small-only">
-              <small><%= link_to "#{post.comments.count} comments", post %> </small>
-              <div class="row">
-                <ul class="small-block-grid-8">
-                  <% current_user.friends.where('friend_id IN (:comments_user_ids)', {comments_user_ids: post.comments.map(&:user_id)}).uniq.take(8).each do |user| %>
-                  <li><%= image_tag("#{user.photo_location}") %></li>
-                  <% end %>
-                </ul>
-              </div>
-            </div>
+            <% end %>
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-
-<div id="<%=dom_id(post)%>" class="reveal-modal expand-modal" data-reveal>
-  <h2><%= post.title.html_safe %></h2>
-  <ul>
-    <% unless post.summary.nil? %>
-    <% post.summary.split("[BREAK]").each do |sentence| %>
-    <%= simple_format(sentence.html_safe) %>
-    <% end %>
-    <% end %>
-  </ul>
-  <a class="close-reveal-modal">&#215;</a>
   
-</div>
-
-
-<% end %>
+  
+  <div id="<%=dom_id(post)%>" class="reveal-modal expand-modal" data-reveal>
+    <h2><%= post.title.html_safe %></h2>
+    <ul>
+      <% unless post.summary.nil? %>
+      <% post.summary.split("[BREAK]").each do |sentence| %>
+      <%= simple_format(sentence.html_safe) %>
+      <% end %>
+      <% end %>
+    </ul>
+    <a class="close-reveal-modal">&#215;</a>
+    
+  </div>
+  
+  
+  <% end %>
