--- a/app/views/posts/_my_feed.html.erb
+++ b/app/views/posts/_my_feed.html.erb
@@ -6,10 +6,13 @@
   <div class="row">
     <div class= "small-12 columns">
       <% if current_user.friend_reposts.map(&:post_id).include?(post.id) %>
-      <div class "row">
-        <div class = "small-10 small-offset-3 large-offset-2 columns large-12 small-12" style="padding-left: 0px;">
+      <div class = "row">
+        <div class = "small-4 small-offset-3 large-offset-2 columns large-12 small-4" style="padding-left: 0px;">
           <span data-tooltip class="has-tip tip-top"  title="<%= (" #{post.reposts.where('user_id IN (:followed_user_ids)', {followed_user_ids: current_user.friend_ids}).each {|repost| repost.user_name}.map(&:user_name).join(', ')}").html_safe  %>" >
             <span class="secondary round label">Reposted by ...</span></span>
+        </div>
+        <div class = "small-4 columns hide-for-medium-up">
+          <small><%= link_to "#{post.comments.count} comments", post %> </small>
         </div>
       </div>
       <% end %>
@@ -25,17 +28,17 @@
           <div class = "row">
             <div class = "small-12 columns hide-for-large-only">
               <medium><%= link_to post.title.html_safe, post.url, :target => "_blank" %></medium>
-               <% if user_signed_in? && (current_user.has_role? :admin) %>
+              <% if user_signed_in? && (current_user.has_role? :admin) %>
               <%= link_to "&#215;".html_safe, post, :confirm => 'Are you sure?',:class => "right",  :method => :delete, remote: true %>
-            <% end %>
+              <% end %>
             </div>
             <div class = "large-12 columns hide-for-medium-down">
               <%= link_to post.title.html_safe, post.url, :target => "_blank" %>
-               <% if user_signed_in? && (current_user.has_role? :admin) %>
+              <% if user_signed_in? && (current_user.has_role? :admin) %>
               <%= link_to "&#215;".html_safe, post, :confirm => 'Are you sure?',:class => "right", :method => :delete, remote: true %>
-            <% end %>
+              <% end %>
             </div>
-           
+            
           </div>
           &nbsp;
           <div class='row'>
