--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,6 @@
 <nav class="tab-bar">
   <section class="middle tab-bar-section" style = 'margin-top: 0px; '>
-    <a href="/"><h1 class="title">WeFeed</h1></a>
+    <a href="/"><h1 class="title">wefeed</h1></a>
   </section>
   <section class="right-small" style = 'margin-top: 0px; '>
     <a class="right-off-canvas-toggle menu-icon" ><span></span></a>
