--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,8 +25,15 @@
               </div>
               <!-- On small devices this column is hidden -->
               <aside class="large-3 columns hide-for-small">
-                <p><img src="http://placehold.it/300x440&text=[ad]" /></p>
-                <p><img src="http://placehold.it/300x440&text=[ad]" /></p>
+                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <!-- Wefeed Sidebar -->
+                <ins class="adsbygoogle"
+                     style="display:inline-block;width:300px;height:600px"
+                     data-ad-client="ca-pub-5502427378583818"
+                     data-ad-slot="1261123205"></ins>
+                <script>
+                  (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
               </aside>
             </div>
           </section>
