--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -34,9 +34,8 @@
 <% else %>
 <div data-alert class="alert-box info radius">
   <h1>Welcome to wefeed</h1>  
-    <p>This is a better content discovery network. You can follow likeminded people,
-  read summaries before clicking on unknown links, and we keep things nice and 
-      organized with <a href="http://blog.wefeed.co/canonical-posts" target="_blank">Conanical Posts</a> and comments.</p>
+    <p>Discover smart content people, read summaries before the article, and join discussions
+      with <a href="http://blog.wefeed.co/canonical-posts" target="_blank">Conanical Posts</a>.</p>
   <p>What have you read lately that made you think? <%= link_to 'Log in', new_user_registration_path%> and let us know.</p>
   <a href="#" class="close">&times;</a>
 </div>
