--- a/app/views/posts/_all_feed.html.erb
+++ b/app/views/posts/_all_feed.html.erb
@@ -32,7 +32,7 @@
           &nbsp;
           <div class='row'>
             <div class = 'small-12 small-left columns large-4'>
-              <a href="#" data-reveal-id="<%=dom_id(post)%>">Summary</a>
+              <a href="#" data-reveal-id="<%=dom_id(post)%>">Summary</a> | 
               <% if user_signed_in? %>
               <% if current_user.reposted_posts.include?(post) %>
               <span class="secondary label">Reposted</span>
