--- a/app/wefeed/www/css/style.css
+++ b/app/wefeed/www/css/style.css
@@ -1,1 +1,13 @@
-/* Empty. Add your own CSS if you like */
+
+.imageDiv{
+    position:relative;
+    top: 0;
+    left: 0;
+}
+.imageDiv .textToBeOnTop{
+    background-color:rgba(255,255,255,0.7);
+    position:absolute;
+    left:0px;
+    right:0px;
+    bottom:5px;
+}
