--- a/app/wefeed/www/templates/menu.html
+++ b/app/wefeed/www/templates/menu.html
@@ -24,8 +24,8 @@
         <ion-item menu-close href="#/app/browse">
           Browse
         </ion-item>
-        <ion-item menu-close href="#/app/playlists">
-          Playlists
+        <ion-item menu-close href="#/app/posts">
+          Posts
         </ion-item>
       </ion-list>
     </ion-content>
