--- a/app/wefeed/www/templates/posts.html
+++ b/app/wefeed/www/templates/posts.html
@@ -6,7 +6,7 @@
     <div class="list card" ng-repeat="post in posts">
       <div class="item-text-wrap">
         <div class="imageDiv item-image">
-          <img src="{{post.image}}">
+          <img src="{{post.primaryimg}}">
           <a ng-href="#/app/posts">
             <div class='item item-text-wrap textToBeOnTop'>
               <h2>{{post.title}}</h2>
