--- a/app/wefeed/www/templates/menu.html
+++ b/app/wefeed/www/templates/menu.html
@@ -18,14 +18,11 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close href="#/app/search">
-          Search
-        </ion-item>
-        <ion-item menu-close href="#/app/browse">
-          Browse
-        </ion-item>
         <ion-item menu-close href="#/app/posts">
           Posts
+        </ion-item>
+        <ion-item menu-close ng-click="logout()" value="Log out">
+          Log out
         </ion-item>
       </ion-list>
     </ion-content>
