--- a/app/wefeed/www/templates/post.html
+++ b/app/wefeed/www/templates/post.html
@@ -1,6 +1,6 @@
 <ion-view>
-  <ion-content>
-    <div ng-repeat="post in posts | filter:{id:postId} ">
+  <ion-content class="padding-horizontal">
+    <div ng-repeat="post in posts | filter:{id:postId}" class="card">
       <img src="{{post.image}}">
       <h1>{{post.title}}</h1>
       <h3>{{post.author}}</h3>
