--- a/app/wefeed/www/templates/posts.html
+++ b/app/wefeed/www/templates/posts.html
@@ -8,8 +8,8 @@
       on-refresh="doRefresh()">
     </ion-refresher>
     <ion-list>
-      <div item-height= "250px" class="imageDiv item-image" collection-repeat="post in posts">
-        <img style="max-height:250px" src="{{post.primaryimg}}">
+      <div style="overflow:hidden" item-height="250px" class="padding imageDiv item-image" collection-repeat="post in posts">
+        <img src="{{post.primaryimg}}">
         <a ng-href="#/app/post/{{post.id}}">
           <div class='item item-text-wrap textToBeOnTop'>
             <h2>{{post.title}}</h2>
