fixed new users not streaming issue

--- a/app/wefeed/www/templates/login.html
+++ b/app/wefeed/www/templates/login.html
@@ -1,5 +1,6 @@
 <ion-view view-title="Login" name="login-view">
   <ion-content class="padding">
+    {{profile}}
     <button class="button button-block button-positive" ng-click="login()">
       Login with Twitter
     </button>
